support: fix text color on boxes
some browsers were not showing the colors
correctly so we add explicitly the color.

--- a/app/support/page.module.css
+++ b/app/support/page.module.css
@@ -156,6 +156,7 @@
 
 .profitBreakdownItem {
   border: 1px solid #fff;
+  color: #ededed;
   border-radius: 0.125rem;
   display: flex;
   flex-direction: column;
